--- a/assets/style.css
+++ b/assets/style.css
@@ -3,9 +3,23 @@ UI Styling
 */
 
 .background-image {
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  z-index: -1;
-  opacity: 0.4;
-}
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: 0;
+    opacity: 0.4;
+  }
+
+  .input-btn {
+    margin-top: 15px;
+    height: 50px !important;
+  }
+
+  .input {
+    background-color: white !important;
+  }
+
+  .bio {
+    margin-top: 20px;
+    display: none;
+  }
