--- a/assets/style.css
+++ b/assets/style.css
@@ -2,24 +2,31 @@
 UI Styling
 */
 
+html,
+body {
+  width: 100%;
+  margin: 0;
+  height: 100%;
+}
+
 .background-image {
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    z-index: 0;
-    opacity: 0.4;
-  }
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: 0;
+  opacity: 0.4;
+}
 
-  .input-btn {
-    margin-top: 15px;
-    height: 50px !important;
-  }
+.input-btn {
+  margin-top: 15px;
+  height: 50px !important;
+}
 
-  .input {
-    background-color: white !important;
-  }
+.input {
+  background-color: white !important;
+}
 
-  .bio {
-    margin-top: 20px;
-    display: none;
-  }
+.bio {
+  margin-top: 20px;
+  display: none;
+}
