--- a/assets/style.css
+++ b/assets/style.css
@@ -9,6 +9,10 @@ body {
   height: 100%;
 }
 
+p, h2 {
+  font-family: 'Bree Serif', serif;
+}
+
 .background-image {
   width: 100%;
   height: 100%;
