--- a/assets/style.css
+++ b/assets/style.css
@@ -4,10 +4,11 @@ UI Styling
 
 html,
 body {
-  width: 100%;
-  margin: 0;
-  height: 100%;
   font-family: "Bree Serif", serif;
+}
+
+p, h2 {
+  margin: 20px;
 }
 
 .background-image {
