--- a/assets/style.css
+++ b/assets/style.css
@@ -34,3 +34,13 @@ h2 {
 .bio {
   margin-top: 20px;
 }
+
+
+#site-footer {
+  background-color: darkslategrey ;
+  max-width: 100%;
+  overflow-x: hidden; 
+  position: relative;
+  color: black;
+  }
+
