--- a/assets/style.css
+++ b/assets/style.css
@@ -4,14 +4,11 @@ UI Styling
 
 html,
 body {
-  width: 100%;
-  margin: 0;
-  height: 100%;
+  font-family: "Bree Serif", serif;
 }
 
-p,
-h2 {
-  font-family: "Bree Serif", serif;
+p, h2 {
+  margin: 20px;
 }
 
 .background-image {
@@ -34,3 +31,17 @@ h2 {
 .bio {
   margin-top: 20px;
 }
+iframe{
+  width: 100%;
+}
+
+
+#site-footer {
+  background-color: darkslategrey ;
+  max-width: 100%;
+  overflow-x: hidden; 
+  position: fixed;
+  bottom: 0;
+  color: black;
+  }
+
