--- a/assets/style.css
+++ b/assets/style.css
@@ -7,6 +7,9 @@ html {
   position: relative;
   font-family: "Bree Serif", serif;
 }
+body {
+  margin-bottom: 100px;
+}
 
 body {
   margin-bottom: 100px;
@@ -29,7 +32,7 @@ h2 {
   margin-top: 15px;
   height: 50px !important;
 }
- 
+
 .input {
   background-color: white !important;
 }
@@ -37,6 +40,7 @@ h2 {
 .bio {
   margin-top: 20px;
 }
+
 iframe {
   width: 100%;
 }
@@ -49,4 +53,8 @@ iframe {
   max-width: 100%;
   bottom: 0;
   color: black;
+}
+
+.card-body {
+  text-align: "left";
 }
