--- a/assets/style.css
+++ b/assets/style.css
@@ -29,8 +29,8 @@ h2 {
 }
 
 .input-btn {
-  margin-top: 15px;
   height: 50px !important;
+  width: 100%;
 }
 
 .input {
@@ -57,4 +57,8 @@ iframe {
 
 .card-body {
   text-align: "left";
+}
+
+.previousSearches {
+  margin-top: 20px;
 }
