--- a/assets/style.css
+++ b/assets/style.css
@@ -11,10 +11,6 @@ body {
   margin-bottom: 100px;
 }
 
-body {
-  margin-bottom: 100px;
-}
-
 p,
 h2 {
   margin: 20px;
@@ -25,7 +21,6 @@ h2 {
   height: 100%;
   position: fixed;
   z-index: 0;
-  opacity: 0.4;
 }
 
 .input-btn {
@@ -46,17 +41,23 @@ iframe {
 }
 
 #site-footer {
+  background: linear-gradient(to right, #274046, #E6DADA);
+  max-width: 100%;
   height: 60px;
   position: absolute;
   line-height: 20px;
-  background-color: darkslategrey;
-  max-width: 100%;
   bottom: 0;
-  color: black;
+  color: whitesmoke;
+  font-weight: bold;
 }
 
 .card-body {
   text-align: "left";
+  background: linear-gradient(to right, #757f9a, #d7dde8);
+}
+.navbar{
+  background: linear-gradient(to right, #bbd2c5, #536976, #292e49); 
+  font-weight: bold;
 }
 
 .previousSearches {
