--- a/assets/style.css
+++ b/assets/style.css
@@ -14,13 +14,14 @@ body {
 p,
 h2 {
   margin: 20px;
+  font-weight: 400;
 }
 
 .background-image {
   width: 100%;
   height: 100%;
   position: fixed;
-  z-index: 0;
+  z-index: 0; 
 }
 
 .input-btn {
@@ -34,6 +35,7 @@ h2 {
 
 .bio {
   margin-top: 20px;
+  color: lightcyan;
 }
 
 iframe {
@@ -55,6 +57,7 @@ iframe {
   text-align: "left";
   background: linear-gradient(to right, #757f9a, #d7dde8);
 }
+
 .navbar{
   background: linear-gradient(to right, #bbd2c5, #536976, #292e49); 
   font-weight: bold;
@@ -62,13 +65,26 @@ iframe {
 
 .previousSearches {
   margin-top: 20px;
+  color: black;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 .avatar {
   text-align: center; /*for centering images inside*/
 }
+
 .rounded-circle{
   max-width:200px;
   max-height:200px;
   width: auto;
   height: auto;
+}
+
+.previousActor{
+  color: darkblue;
+  font-weight: 400;
+  font-size: larger;
+}
+
+#mostPopular{
+  color: royalblue;
 }
