--- a/assets/style.css
+++ b/assets/style.css
@@ -21,7 +21,8 @@ h2 {
   width: 100%;
   height: 100%;
   position: fixed;
-  z-index: 0; 
+  z-index: -1; 
+  opacity: 0.8;
 }
 
 .input-btn {
@@ -65,7 +66,7 @@ iframe {
 
 .previousSearches {
   margin-top: 20px;
-  color: black;
+  color:#292e49;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 .avatar {
@@ -80,11 +81,8 @@ iframe {
 }
 
 .previousActor{
-  color: darkblue;
+  color:#292e49;
   font-weight: 400;
   font-size: larger;
 }
 
-#mostPopular{
-  color: royalblue;
-}
